crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__two_projections_first.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
addInteger (case@Pair (trace "first" in (con (pair integer integer) (7, 8))) of
  Pair x#46 y#47 -> x#46) (case@Pair (trace "second" in (con (pair integer integer) (7, 8))) of
  Pair x#48 y#49 -> x#48)
--- unoptimized UPLC
(program 1.1.0
  [[(builtin addInteger)
    (case
      (force
        [[(force (builtin trace)) (con string "first")]
          (delay (con (pair integer integer) (7, 8)))])
      (lam x_46 (lam y_47 x_46)))]
    (case
      (force
        [[(force (builtin trace)) (con string "second")]
          (delay (con (pair integer integer) (7, 8)))])
      (lam x_48 (lam y_49 x_48)))])
--- optimized Core
let anf#5 : pair int int = trace "first" in (con (pair integer integer) (7, 8)) in
let anf#6 : int = case@Pair anf#5 of
  Pair x#1 y#2 -> x#1 in
let anf#7 : pair int int = trace "second" in (con (pair integer integer) (7, 8)) in
let anf#8 : int = case@Pair anf#7 of
  Pair x#3 y#4 -> x#3 in
addInteger anf#6 anf#8
--- optimized UPLC
(program 1.1.0
  [(lam builtin_17
    [(lam anf_9
      [(lam anf_12
        [(lam anf_13
          [(lam anf_16 [[(builtin addInteger) anf_12] anf_16])
            (case anf_13 (lam x_14 (lam y_15 x_14)))])
          (force
            [[builtin_17 (con string "second")] (delay (con (pair integer integer) (7, 8)))])])
        (case anf_9 (lam x_10 (lam y_11 x_10)))])
      (force
        [[builtin_17 (con string "first")] (delay (con (pair integer integer) (7, 8)))])])
    (force (builtin trace))])
--- result
(con integer 14)
--- logs
["first", "second"]
--- budget
cpu: 652304, memory: 2866
--- isolated Core before
let anf#108 : pair int int = trace "first" in (con (pair integer integer) (7, 8)) in
let anf#109 : int = case@Pair anf#108 of
  Pair x#46 y#47 -> x#46 in
let anf#110 : pair int int = trace "second" in (con (pair integer integer) (7, 8)) in
let anf#111 : int = case@Pair anf#110 of
  Pair x#48 y#49 -> x#48 in
addInteger anf#109 anf#111
--- isolated Core after
let anf#108 : pair int int = trace "first" in (con (pair integer integer) (7, 8)) in
let anf#109 : int = case@Pair anf#108 of
  Pair x#46 y#47 -> x#46 in
let anf#110 : pair int int = trace "second" in (con (pair integer integer) (7, 8)) in
let anf#111 : int = case@Pair anf#110 of
  Pair x#48 y#49 -> x#48 in
addInteger anf#109 anf#111
